--- a/ica6.html
+++ b/ica6.html
@@ -22,7 +22,12 @@
   
   <section class="hero" id="hero">
     <!-- [Q2. use a <video> to insert a video to autoplay. ] -->
-    <div class="left-video">Insert Video Here</div>
+    <div class="left-video">
+      <video autoplay muted controls>
+        <source src="bbc hw5.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
     <div class="right-content">
       <!-- [Q2 cont. Add paragraph text to the div below about the video you choose. ] -->
       <div class="right-text"></div>
