--- a/ica6.html
+++ b/ica6.html
@@ -27,10 +27,14 @@
         <source src="bbc hw5.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
+      <!--Figured out how to do this using chatgpt on 10/12/24 asking the question:create html and css to insert a video in my 
+      webpage that will start playing as soon as it is loaded -->
     </div>
     <div class="right-content">
       <!-- [Q2 cont. Add paragraph text to the div below about the video you choose. ] -->
-      <div class="right-text"></div>
+      <div class="right-text">
+        <p>This is a video showing the cleanliness and accessibility of the BBC website!</p>
+      </div>
       <div class="right-button">
         <!-- [Q3. Style this button both for original styles and for the styles to change :onhover. ] -->
         <button>Style this button!</button>
