--- a/ica6.html
+++ b/ica6.html
@@ -46,7 +46,7 @@
 
   <section class="iframe-container" id="iframe">
     <!-- [Q5. Copy the webaddress or iframe architecture from a website of your choice and insert it to the content of the .iframe div] -->
-    <div class="iframe">Insert your iframe here</div>
+    <div class="iframe"><iframe width="560" height="315" src="https://www.youtube.com/embed/AWVyeldStIE?si=_KqXj3bdFPy2_8Yx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
   </section>
   
   <section class="hw6-container" id="hw6">
