--- a/ica6.html
+++ b/ica6.html
@@ -10,7 +10,7 @@
   <header>
     <div class="header-row">
       <!-- [Q1. Draw an svg logo and put it as the .header-logo div. Wrap the svg in an <a> with href referencing this page ] -->
-      <div class="header-logo">LOGO GOES HERE</div>
+      <div class="header-logo"><img src="logo.svg"></div>
       <nav>
         <ul>
           <li><a href="#hero">hero</a></li>
