added some citations to chat gpt help that I fogot to add earlier 🤙

--- a/ica6.html
+++ b/ica6.html
@@ -10,7 +10,9 @@
   <header>
     <div class="header-row">
       <!-- [Q1. Draw an svg logo and put it as the .header-logo div. Wrap the svg in an <a> with href referencing this page ] -->
-      <div class="header-logo"><img src="logo.svg"></div>
+      <div class="header-logo"><img src="logo.svg"><!-- figured out how to do this by asking chat gpt on 10/12/24 asking the question:how to insert an image in a webpage in html
+
+      --></div>
       <nav>
         <ul>
           <li><a href="#hero">hero</a></li>
@@ -47,6 +49,8 @@
   <section class="iframe-container" id="iframe">
     <!-- [Q5. Copy the webaddress or iframe architecture from a website of your choice and insert it to the content of the .iframe div] -->
     <div class="iframe"><iframe width="560" height="315" src="https://www.youtube.com/embed/AWVyeldStIE?si=_KqXj3bdFPy2_8Yx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
+    <!--Figured out how to do this by asking chatgpt on 10/12/24 the question:how to insert an iframe in html
+ -->
   </section>
   
   <section class="hw6-container" id="hw6">
